<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="org.kjh.mytravel.ui.features.upload.location.LocationSearchViewModel" />
        <variable
            name="fragment"
            type="org.kjh.mytravel.ui.features.upload.location.LocationSearchFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mapQueryInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintHorizontal_weight="0.85"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
            app:hintEnabled="false"
            android:layout_margin="15dp"
            app:boxStrokeColor="#7732ff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mapQuery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search_address_hint"
                android:padding="0dp"
                android:maxLines="1"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:text="@={viewModel.searchQuery}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/cancel"
            android:layout_marginEnd="15dp"
            android:padding="0dp"
            onThrottleClick="@{fragment::dismiss}"
            app:layout_constraintHorizontal_weight="0.15"
            app:layout_constraintTop_toTopOf="@+id/til_mapQueryInputLayout"
            app:layout_constraintBottom_toBottomOf="@+id/til_mapQueryInputLayout"
            app:layout_constraintStart_toEndOf="@+id/til_mapQueryInputLayout"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_queryResultRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/til_mapQueryInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            bindItems="@{viewModel.uiState.toData()}" />

        <TextView
            android:id="@+id/tv_resultEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/search_empty"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            app:isVisible="@{!viewModel.uiState.loading &amp;&amp; viewModel.uiState.toData() != null &amp;&amp; viewModel.uiState.toData().size == 0}"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintTop_toBottomOf="@+id/til_mapQueryInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isVisible="@{viewModel.uiState.loading}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>