<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="org.kjh.mytravel.ui.user.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_userPageContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_userToolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:title="@{viewModel.uiState.userItem.nickName}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_scrollFlags="scroll"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/cdl_userContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tb_userToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/abl_userAppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:background="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_userInfoContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/siv_profileImg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/circle"
                        app:imgUrl="@{viewModel.uiState.userItem.profileImg}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tv_postCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.uiState.userItem.postCount)}"
                        android:textColor="#444444"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintTop_toTopOf="@+id/siv_profileImg"
                        app:layout_constraintBottom_toTopOf="@+id/tv_post"
                        app:layout_constraintStart_toStartOf="@id/tv_post"
                        app:layout_constraintEnd_toEndOf="@id/tv_post" />

                    <TextView
                        android:id="@+id/tv_followerCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.uiState.userItem.followCount)}"
                        android:textColor="#444444"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintTop_toTopOf="@+id/siv_profileImg"
                        app:layout_constraintStart_toStartOf="@+id/tv_follower"
                        app:layout_constraintEnd_toEndOf="@+id/tv_follower"
                        app:layout_constraintBottom_toTopOf="@+id/tv_follower"/>

                    <TextView
                        android:id="@+id/tv_followingCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.uiState.userItem.followingCount)}"
                        android:textColor="#444444"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintTop_toTopOf="@+id/siv_profileImg"
                        app:layout_constraintStart_toStartOf="@+id/tv_following"
                        app:layout_constraintEnd_toEndOf="@+id/tv_following"
                        app:layout_constraintBottom_toTopOf="@+id/tv_following"/>

                    <TextView
                        android:id="@+id/tv_post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#777777"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_postCount"
                        app:layout_constraintStart_toEndOf="@+id/siv_profileImg"
                        app:layout_constraintEnd_toStartOf="@+id/tv_follower"
                        app:layout_constraintBottom_toBottomOf="@+id/siv_profileImg"
                        app:layout_constraintHorizontal_weight="1"
                        android:gravity="center"
                        android:text="@string/post"/>

                    <TextView
                        android:id="@+id/tv_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#777777"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_followerCount"
                        app:layout_constraintStart_toEndOf="@+id/tv_post"
                        app:layout_constraintEnd_toStartOf="@+id/tv_following"
                        app:layout_constraintBottom_toBottomOf="@+id/siv_profileImg"
                        app:layout_constraintHorizontal_weight="1"
                        android:gravity="center"
                        android:text="@string/follower"/>

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#777777"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_followingCount"
                        app:layout_constraintStart_toEndOf="@+id/tv_follower"
                        app:layout_constraintBottom_toBottomOf="@+id/siv_profileImg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        android:gravity="center"
                        android:text="@string/following"/>

                    <TextView
                        android:id="@+id/tv_userIntroduce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="#444444"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/siv_profileImg"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@{viewModel.uiState.userItem.introduce}"/>

                    <Button
                        android:id="@+id/btn_follow"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:textSize="13sp"
                        android:text="@{viewModel.uiState.userItem.following ? @string/following : @string/follow}"
                        app:layout_constraintTop_toBottomOf="@+id/tv_userIntroduce"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_userPostList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isVisible="@{viewModel.uiState.loading}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
